# spinning-mug

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  anti_alias.cpp  anti_alias.h  buffer.cpp  buffer.h  camera.cpp  camera.h  gpu.cpp  gpu.h  image.cpp  image.h  light.cpp  light.h  load_model.cpp  load_model.h  main.cpp  math.cpp  math.h  memory.cpp  memory.h  pipeline.cpp  pipeline.h  scene.cpp  scene.h  string_utils.h  transform.cpp  vertex.cpp  vertex.h
include/: anti_alias.h  gpu.h  load_model.h  pipeline.h  render_pass.h  scene.h  sm_math.h  transform.h
shaders/: compile.bat  light_cube.frag  light_cube.vert  normal_mapping.frag  normal_mapping.vert  shader.frag  shader.vert  shader_t.vert
src/: anti_alias.cpp  buffer.cpp  camera.cpp  gpu.cpp  load_model.cpp  load_models.h  main.cpp  math.cpp  math.h  render_pass.cpp  string_utils.cpp  transform.cpp  transform.h  vertex.cpp  vertex.h
src/shaders/: shader.frag  shader.vert
